--- a/README.textile
+++ b/README.textile
@@ -16,7 +16,7 @@ Clone this repo into your home directory either as .vim (linux/mac) or
 vimfiles (Windows). Such as:
 
 <pre><code>
-git clone git://github.com/akitaonrails/vimfiles.git ~/.vim
+git clone https://github.com/caiofilipini/vimfiles.git ~/.vim
 </pre></code>
 
 Then 'cd' into the repo and run this to get the snippets submodule:
